src/main/java/com/example/demo/error/InvalidException.java
package com.example.demo.error;

public class InvalidException extends Exception
{
	public InvalidException(String s) {
		super(s);
	}


}
